[package]
name = "webhook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
reqwest = "0.11.0"
serde = "1"
serde_json = "1"
env_logger = "0.8.3"

[dependencies.chrono]
version = "0.4.0"
features = ["serde"]

[dependencies.tera]
version = "1"
default-features = false
