[package]
name = "webhook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
reqwest = { version = "0.10.0", features=["json"] }
serde = "1"
serde_json = "1"
env_logger = "0.8.3"
log = "0.4.0"
async-trait = "0.1"
url = "2.0"

[dependencies.chrono]
version = "0.4.0"
features = ["serde"]

[dependencies.tera]
version = "1"
default-features = true
